<resources>
    <string name="app_name">Bechain</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="save_details">Save Details</string>
    <string name="login_title">LOGIN</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="signup_title">SIGNUP</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="question">Loading...</string>
    <string name="next">Next</string>
    <string name="chat_room">Chat Room</string>
    <string name="no_message">No Messages Yet</string>
    <string name="start_matching">Start Mactching</string>
    <string name="enter_phone_num">Enter Your Contact Number</string>
    <string name="get_started">Get Started</string>
    <string name="baked_with_love_in_india">Baked with ♥ in India</string>
    <string name="welcome_text">Experience Love with the fastest growing community of Love Seeker, Because you deserve to be loved.</string>
    <string name="gender_inq">Whats your gender ?</string>
    <string name="FullName">Your Name</string>
    <string name="age_inq">Your Age</string>
    <string name="start">Start</string>
    <string name="country_code">+91</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="on_board">Let\'s Get You On-Board!</string>
    <string name="first_name">First Name*</string>
    <string name="birth_date">Birth date*</string>
    <string name="residence">Place of Residence*</string>
    <string name="preference">Preference*</string>
    <string name="profession">Profession*</string>
    <string name="proceed">Proceed</string>
    <string name="lets_verify">Let\'s Verify Your Phone Number</string>
    <string name="verify">Verify</string>
    <string name="auth_query">Why we ask for phone Number ?</string>
    <string name="otp_queries">Didnt recieved OTP yet ?</string>
    <string name="detect_otp">WAITING TO AUTOMATICALLY DETECT OTP…</string>
    <string name="resend">Resend</string>
    <string name="fullname">Name</string>
    <string name="random_description">Random Description</string>
    <string name="comma">, </string>
    <string name="age">Age</string>
    <string name="type_msg">Type a message</string>
    <string name="edit_profile">Photo</string>
    <string name="save_profile">Save Profile ►</string>
    <string name="seen">seen</string>
    <string name="registerImage">Upload atleast 3 images</string>
    <string name="uploadImage">Set your profile photo</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="username">UserName</string>
    <string name="complete_profile">Complete your profile</string>
    <string name="enter_bio">Write something about yourself in less than 1000 characters</string>
    <string name="hobbies">Hobbies</string>
    <string name="work">Work</string>
    <string name="religion">Religion</string>
    <string name="openToConnection">Open to connections.</string>
    <string name="account_settings">Account settings</string>
    <string name="preferences">Preferences</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="waitingforuser">Waiting for users to come online.</string>
    <string name="room">Room</string>
    <string name="meet_people">This is where you meet People</string>
    <string name="searching">Searching...</string>
    <string name="breath_in">Breath In, Breath Out...</string>
    <string name="skip_your_best">You might Skip Your Beat</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_got_chained">You Got Chained... ♥</string>
    <string name="say_hi">Say Hi!</string>
    <string name="edit_profile_text">Edit Your Profile</string>
    <string name="feedback">Give us a Feedback</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Log Out</string>
    <string name="agePreference">Age Preference</string>
    <string name="settings">Settings</string>
    <string name="report">Report</string>
    <string name="delete_connection">Delete Connection</string>
    <string name="confirm_account_delete">Delete Account</string>
    <string name="enterfeedback">Enter feedback</string>
    <string name="submit">Submit</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="reportConfirm">Do you want to report this user?</string>
</resources>