<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back_icon"
        app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mainTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ViewFlipper
            android:id="@+id/viewFlipperLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/mainTitleTV">

            <LinearLayout
                android:id="@+id/mainScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/accountSettingTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/account_settings"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/greyish" />

                <TextView
                    android:id="@+id/rateUsTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/rate_us"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/greyish" />

                <TextView
                    android:id="@+id/shareTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:padding="20dp"
                    android:text="@string/share"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/greyish" />

                <TextView
                    android:id="@+id/feedbackTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:padding="20dp"
                    android:text="@string/feedback"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/accountSettingScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/deleteAccountTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/delete_account"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/greyish" />

                <TextView
                    android:id="@+id/logOutTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/logout"
                    android:textSize="15sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/feedbackScreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/enterFeedbackTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    app:counterOverflowTextAppearance="@color/colorOrange"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterFeedbackTEL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterfeedback"
                        android:inputType="textMultiLine"
                        android:lines="50"
                        android:maxLength="10000"
                        android:maxLines="10"
                        android:minLines="1"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/submitFeedbackBT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray"
                    android:enabled="false"
                    android:text="@string/submit"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </ViewFlipper>
    </RelativeLayout>
</LinearLayout>